Adjust spacing, fix date input

--- a/src/frontend/index.css
+++ b/src/frontend/index.css
@@ -30,8 +30,7 @@ header {
 
 h1 {
   font-size: 1.2rem;
-  margin: 16px 8px;
-  padding: 6px 8px;
+  margin: 1rem 0.5rem;
 }
 
 a {
